# twitter_web_app_next_js_actix_web

./: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
client/src/: App.tsx
client/src/common/: searchAPI.ts
client/src/components/: KeyWordBox.tsx  Pager.css  Pager.tsx  RadioButton.css  RadioButton.tsx  SearchButton.tsx  SearchResult.tsx  SelectBox.css  SelectBox.tsx
docker/: docker-compose.yml
docker/services/client/: Dockerfile
docker/services/server/: Dockerfile
server/: .env  Cargo.toml
server/src/: main.rs
service/client/: .gitignore  package-lock.json
service/client/web/: package.json
service/server/: .gitignore  Cargo.toml
service/server/src/: lib.rs  (+1 more)
service/web/server/: .env  Cargo.toml  README.md
service/web/server/migrations/2021-03-20-063845_create_tweets/: up.sql
service/web/server/src/: lib.rs  main.rs  models.rs  schema.rs  twitter.rs
service/web/server/src/database_utils/: pool.rs
service/web/server/src/domain/entity/: mod.rs  search_api.rs  tweet_record.rs
service/web/server/src/driver/: hit_twitter_api.rs  tweet_records.rs
service/web/server/src/hit_api_utils/: error.rs  setting.rs
service/web/server/src/routes/hit_twitter_api/: mod.rs  search_api.rs
service/web/server/src/routes/tweets/: get.rs  mod.rs  post_record.rs
service/web/server/src/usecase/: mod.rs
service/web/server/src/usecase/hit_twitter_api/: hit_search_api.rs
service/web/server/src/usecase/tweet_records/: add.rs  delete.rs  mod.rs  search_by_tweet_id.rs
src/: App.tsx  main.rs
src/components/: KeyWordBox.tsx  SearchButton.tsx  SelectBox.tsx
tools/: startApp.sh  startDocker.sh
(+38 files in other folders)
