[package]
authors = ["hiraoka"]
edition = "2018"
name = "twitter"
version = "0.1.0"
[dependencies]
tokio = { version = "0.2", features = ["full"] } # 0.3だと動作しない
reqwest = { version = "0.10.9", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
dotenv = "0.15.0"
