[package]
authors = ["hiraoka"]
edition = "2018"
name = "twitter_search"
version = "0.1.0"
[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
reqwest = { version = "0.10.9", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
dotenv = "0.15.0"
qstring = "0.7.2"
env_logger = "0.8.2"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
